add:TOPページの作成

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -13,3 +13,16 @@
  *= require_tree .
  *= require_self
  */
+
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  min-height: 100%;
+  box-sizing: border-box;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+}
