--- a/app/views/layouts/_header_before_login.html.erb
+++ b/app/views/layouts/_header_before_login.html.erb
@@ -1,11 +1,12 @@
-<header class="header-before-login">
-  <div class="header-left">
-    <%= link_to root_path, class: "logo-image" do %>
-      <%= image_tag "logo.png", alt: "Historia", width: "100" %> <% end %>
+<header class="flex justify-between items-center px-8 py-4 border-b border-black bg-white shadow-sm">
+  <div class="flex items-center">
+    <%= link_to root_path, class: "" do %>
+      <%= image_tag "logo.png", alt: "Historia", class: "w-24" %>
+    <% end %>
   </div>
-  <nav class="header-right">
-    <%= link_to "お試し作成", "#", class: "btn btn-outline" %>
-    <%= link_to "使い方ガイド", "#", class: "btn btn-outline" %>
-    <%= link_to "ログイン/新規登録", "#", class: "btn btn-primary" %>
+  <nav class="flex space-x-2">
+    <%= link_to "お試し作成", "#", class: "px-4 py-2 border border-black text-black bg-white rounded-md hover:bg-gray-100 transition-colors duration-300" %>
+    <%= link_to "使い方ガイド", "#", class: "px-4 py-2 border border-black text-black bg-white rounded-md hover:bg-gray-100 transition-colors duration-300" %>
+    <%= link_to "ログイン/新規登録", "#", class: "px-4 py-2 bg-black text-white border border-black rounded-md hover:bg-gray-700 transition-colors duration-300" %>
   </nav>
 </header>
