--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,8 @@
-<footer class="footer">
-    <p>&copy; 2025 historia All Rights Reserved. | <%= link_to "プライバシーポリシー", "#" %> | <%= link_to "利用規約", "#" %> | <%= link_to "お問い合わせ", "#" %></p>
+<footer class="bg-black text-white text-center p-6 w-full">
+  <p class="text-sm whitespace-nowrap">
+    © <%= Time.now.year %> Historia. All rights reserved. |
+    <%= link_to "プライバシーポリシー", "#", class: "mx-1 underline hover:no-underline" %> |
+    <%= link_to "利用規約", "#", class: "mx-1 underline hover:no-underline" %> |
+    <%= link_to "お問い合わせ", "#", class: "mx-1 underline hover:no-underline" %>
+  </p>
 </footer>
