update:重複しているTailwind記載個所を削除

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -5,14 +5,13 @@
 @tailwind components;
 @tailwind utilities;
 
-/* ここに html, body のカスタムCSSを記述 */
 html, body {
   margin: 0;
   padding: 0;
   width: 100%;
   min-height: 100%;
   box-sizing: border-box;
-  font-family: 'Noto Sans JP', sans-serif; /* 例: ここでフォントを指定 */
+  font-family: 'Noto Sans JP', sans-serif;
 }
 body {
   display: flex;
