--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -71,7 +71,7 @@
 
   <div class="action-buttons flex justify-center mt-5 mb-5 space-x-4">
     <%= link_to "お試し作成", "#", class: "px-8 py-4 border-2 border-black text-black bg-white rounded-lg font-bold text-lg hover:bg-gray-100 transition-colors duration-300" %>
-    <%= link_to "ログイン / 新規登録", "#", class: "px-8 py-4 bg-black text-white border-2 border-black rounded-lg font-bold text-lg hover:bg-gray-700 transition-colors duration-300" %>
+    <%= link_to "ログイン / 新規登録", "/auth/google_oauth2", class: "px-8 py-4 bg-black text-white border-2 border-black rounded-lg font-bold text-lg hover:bg-gray-700 transition-colors duration-300" %>
   </div>
   <p class="note text-sm text-black leading-relaxed mt-0 mb-20">
     ※注意 : 「お試し作成」では作成したストーリーの保存は行われません。<br>
