--- a/app/views/layouts/_header_before_login.html.erb
+++ b/app/views/layouts/_header_before_login.html.erb
@@ -7,6 +7,6 @@
   <nav class="flex space-x-2">
     <%= link_to "お試し作成", "#", class: "px-4 py-2 border border-black text-black bg-white rounded-md hover:bg-gray-100 transition-colors duration-300" %>
     <%= link_to "使い方ガイド", "#", class: "px-4 py-2 border border-black text-black bg-white rounded-md hover:bg-gray-100 transition-colors duration-300" %>
-    <%= link_to "ログイン/新規登録", "#", class: "px-4 py-2 bg-black text-white border border-black rounded-md hover:bg-gray-700 transition-colors duration-300" %>
+    <%= link_to "ログイン/新規登録", "/auth/google_oauth2", class: "px-4 py-2 bg-black text-white border border-black rounded-md hover:bg-gray-700 transition-colors duration-300" %>
   </nav>
 </header>
