add:ストーリー一覧ページの作成

--- a/app/views/layouts/_header_before_login.html.erb
+++ b/app/views/layouts/_header_before_login.html.erb
@@ -1,4 +1,4 @@
-<header class="flex justify-between items-center px-8 py-4 border-b border-black bg-white shadow-sm bg-red-600">
+<header class="flex justify-between items-center px-8 py-4 border-b border-black bg-white shadow-sm">
   <div class="flex items-center">
     <%= link_to root_path, class: "" do %>
       <%= image_tag "logo.png", alt: "Historia", class: "w-24" %>
