--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,23 +3,29 @@
   <head>
     <title><%= content_for(:title) || "Historia" %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="apple-mobile-web-app-capable" content="yes">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
-    <%= yield :head %>
-
-    <link rel="manifest" href="/manifest.json">
-    <link rel="icon" href="/icon.png" type="image/png">
-    <link rel="icon" href="/icon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="/icon.png">
-    <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
+    
+    <%= stylesheet_link_tag "tailwind", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
+  <body class="flex flex-col min-h-screen">
+    <% if logged_in? %>
+      <% if controller_name == 'stories' && action_name == 'index' %>
+        <%= render 'layouts/header_after_story' %>
+      <% else %>
+        <%= render 'layouts/header_after_login' %>
+      <% end %>
+    <% else %>
+      <%= render 'layouts/header_before_login' %>
+    <% end %>
 
-    <%= yield %>
+    <main class="flex-grow">
+      <% if notice %><p class="notice"><%= notice %></p><% end %>
+      <% if alert %><p class="alert"><%= alert %></p><% end %>
+      <%= yield %>
+    </main>
 
     <%= render 'layouts/footer' %>
   </body>
