--- a/app/views/layouts/_header_after_login.html.erb
+++ b/app/views/layouts/_header_after_login.html.erb
@@ -5,8 +5,8 @@
     <% end %>
   </div>
   <nav class="flex items-center space-x-4">
-    <%= link_to "ログアウト", logout_path, data: { turbo_method: :delete }, class: "border border-gray-400 px-4 py-2 rounded-md font-semibold" %>
-    <%= link_to "使い方ガイド", "#", class: "border border-gray-400 px-4 py-2 rounded-md font-semibold" %>
-    <%= link_to "ホームに戻る", new_story_path, class: "bg-black text-white px-4 py-2 rounded-md font-semibold" %>
+    <%= link_to "ログアウト", logout_path, data: { turbo_method: :delete, turbo_confirm: 'ログアウト後はトップページに移動します' }, class: "border border-gray-400 px-4 py-2 rounded-md font-semibold hover:bg-gray-100 transition-colors duration-300" %>
+    <%= link_to "使い方ガイド", "#", class: "border border-gray-400 px-4 py-2 rounded-md font-semibold hover:bg-gray-100 transition-colors duration-300" %>
+    <%= link_to "ホームに戻る", stories_path, class: "border border-gray-400 px-4 py-2 rounded-md font-semibold hover:bg-gray-100 transition-colors duration-300" %>
   </nav>
 </header>
