--- a/app/views/layouts/_header_before_login.html.erb
+++ b/app/views/layouts/_header_before_login.html.erb
@@ -5,8 +5,8 @@
     <% end %>
   </div>
   <nav class="flex space-x-2">
-    <%= link_to "お試し作成", "#", class: "px-4 py-2 border border-black text-black bg-white rounded-md hover:bg-gray-100 transition-colors duration-300" %>
-    <%= link_to "使い方ガイド", "#", class: "px-4 py-2 border border-black text-black bg-white rounded-md hover:bg-gray-100 transition-colors duration-300" %>
-    <%= link_to "ログイン/新規登録", "/auth/google_oauth2", class: "px-4 py-2 bg-black text-white border border-black rounded-md hover:bg-gray-700 transition-colors duration-300" %>
+    <%= link_to "お試し作成", "#", class:"border border-gray-400 px-4 py-2 rounded-md font-semibold bg-white hover:bg-gray-100 transition-colors duration-300" %>
+    <%= link_to "使い方ガイド", "#", class: "border border-gray-400 px-4 py-2 rounded-md font-semibold bg-white hover:bg-gray-100 transition-colors duration-300" %>
+    <%= link_to "ログイン/新規登録", "/auth/google_oauth2", class: "bg-black text-white px-4 py-2 rounded-md font-semibold hover:bg-gray-700 transition-colors duration-300" %>
   </nav>
 </header>
