add:パンくずリスト、ページ遷移タブの実装

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,12 @@
     <% end %>
 
     <main class="flex-grow">
+      <div class="max-w-screen-xl mx-auto px-4 sm:px-6 lg:px-8">
+        <nav class="text-sm text-black py-4" aria-label="Breadcrumb">
+          <%= breadcrumbs separator: " / " %>
+        </nav>
+      </div>
+      
       <% if notice %><p class="notice"><%= notice %></p><% end %>
       <% if alert %><p class="alert"><%= alert %></p><% end %>
       <%= yield %>
