--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -1,18 +1,8 @@
+<% breadcrumb :story, @story %>
 <div class="px-4 sm:px-6 lg:px-8 py-8">
   <div class="max-w-screen-xl mx-auto">
-    <nav class="text-sm text-gray-500 mb-4">
-      <ol class="list-none p-0 inline-flex">
-        <li class="flex items-center">
-          <a href="<%= stories_path %>" class="text-gray-700 hover:text-black">ストーリー一覧</a>
-          <svg class="fill-current w-3 h-3 mx-3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0L20.66 414.665c-9.373-9.373-9.373-24.569 0-33.941l154.212-154.212c9.373-9.373 24.569-9.373 33.941 0l154.212 154.212c9.373 9.373 9.373 24.569 0 33.941l-33.941 33.941z"/></svg>
-        </li>
-        <li>
-          <span class="text-black">ストーリー詳細</span>
-        </li>
-      </ol>
-    </nav>
 
-    <div class="flex justify-center items-center space-x-4 mt-16 mb-20 gap-8">
+    <div class="flex justify-center items-center space-x-4 mb-16 gap-8">
       <% if @story.published? %>
         <%= button_to "公開中", '#', class: "bg-black text-white px-8 py-3 rounded-md font-semibold", disabled: true %>
         <%= button_to "下書き", set_status_story_path(@story, status: :draft), method: :patch, class: "border border-gray-400 px-8 py-3 rounded-md font-semibold hover:bg-gray-100 transition-colors duration-300" %>
@@ -22,10 +12,33 @@
       <% end %>
     </div>
 
+    <div class="mb-12">
+      <div>
+        <nav class="-mb-px flex justify-center space-x-8" aria-label="Tabs">
+          <%# 現在のページ（ストーリー）のタブ %>
+          <a href="<%= story_path(@story) %>" class="border-black text-black whitespace-nowrap py-4 px-1 border-b-2 font-medium text-lg" aria-current="page">
+            ストーリー
+          </a>
+          <%# ワールドガイドのタブ（リンク先はダミー） %>
+          <a href="#" class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-lg">
+            ワールドガイド
+          </a>
+          <%# キャラクターのタブ（リンク先はダミー） %>
+          <a href="#" class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-400 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-lg">
+            キャラクター
+          </a>
+          <%# フラグのタブ（リンク先はダミー） %>
+          <a href="#" class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-400 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-lg">
+            フラグ
+          </a>
+        </nav>
+      </div>
+    </div>
+
     <div class="border-2 rounded-lg p-8 border-black">
       <div class="mb-6">
         <p class="font-bold text-lg mb-2">■ タイトル</p>
-        <p class="text-xl ml-4"><%= @story.title %></p>
+        <p class="text-xl ml-4 break-all"><%= @story.title %></p>
       </div>
 
       <div class="mb-6">
@@ -40,7 +53,7 @@
 
       <div class="mb-6">
         <p class="font-bold text-lg mb-2">■ あらすじ</p>
-        <div class="text-xl ml-4"><%= simple_format(@story.synopsis) %></div>
+        <div class="text-xl ml-4 break-all"><%= simple_format(@story.synopsis) %></div>
       </div>
 
       <div class="flex justify-center mt-8">
