--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -1,4 +1,4 @@
-<div class="px-4 sm:px-6 lg:px-8 py-8">
+<div class="container mx-auto px-4 sm:px-6 lg:px-8 py-8">
   <div class="max-w-screen-xl mx-auto">
     <div class="flex justify-between items-center mb-8">
       <h1 class="text-4xl font-bold tracking-tighter border-l-8 border-black mt-8 mb-8 pl-4">ストーリー</h1>
@@ -22,7 +22,14 @@
               </div>
               <div class="flex items-center gap-3">
                 <span class="text-black">最終更新: <%= l story.updated_at, format: :short %></span>
-                <%= link_to "削除", story_path(story), data: { turbo_method: :delete, turbo_confirm: '本当に削除しますか？' }, class: "border border-black rounded-md px-2 py-0.5 hover:bg-black hover:text-white transition-colors text-xs" %>
+  
+                <%= link_to "削除", "#",
+                  data: {
+                    action: "click->modal#open",
+                     modal_url: story_path(story),
+                     modal_story_title: story.title
+                  },
+                  class: "border border-gray-400 rounded-md px-2 py-0.5 hover:bg-red-500 hover:text-white transition-colors text-xs" %>
               </div>
             </div>
 
