--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -57,7 +57,9 @@
       </div>
 
       <div class="flex justify-center mt-8">
-        <%= link_to "ストーリーを編集する", "#", class: "border border-gray-400 px-4 py-3 rounded-md font-semibold hover:bg-gray-100 transition-colors duration-300" %>
+        <%= link_to "ストーリーを編集する", edit_story_path(@story),
+          class: "border border-gray-400 px-4 py-3 rounded-md font-semibold hover:bg-gray-100 transition-colors duration-300",
+          data: { turbo: false } %>
       </div>
     </div>
 
