--- a/app/views/stories/_form.html.erb
+++ b/app/views/stories/_form.html.erb
@@ -34,6 +34,6 @@
 
   <div class="pt-4">
     <% submit_text = f.object.new_record? ? "ストーリーをはじめる！" : "ストーリーを編集する" %>
-    <%= f.submit submit_text, class: "w-full py-3 px-4 border border-transparent rounded-md shadow-sm text-lg font-medium text-white bg-black hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-black cursor-pointer" %>
+    <%= f.submit submit_text, class: "w-full py-3 px-4 border border-transparent rounded-md shadow-sm text-lg font-semibold text-white bg-black hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-black cursor-pointer" %>
   </div>
 <% end %>
