--- a/app/views/stories/_form.html.erb
+++ b/app/views/stories/_form.html.erb
@@ -12,7 +12,7 @@
 
   <div>
     <%= f.label :title, "タイトル", class: "block text-lg font-bold" %>
-    <%= f.text_field :title, class: "mt-1 block w-full px-3 py-2 border border-black rounded-md shadow-sm focus:outline-none focus:ring-black focus:border-black" %>
+    <%= f.text_field :title, class: "mt-1 block w-full px-3 py-2 border border-black rounded-md shadow-sm focus:outline-none focus:ring-black focus:border-black", placeholder: "100文字以内で記入してください。" %>
   </div>
 
   <div>
@@ -24,7 +24,7 @@
 
   <div>
     <%= f.label :thema, "テーマ", class: "block text-lg font-bold" %>
-    <%= f.text_field :thema, class: "mt-1 block w-full px-3 py-2 border border-black rounded-md shadow-sm focus:outline-none focus:ring-black focus:border-black" %>
+    <%= f.text_field :thema, class: "mt-1 block w-full px-3 py-2 border border-black rounded-md shadow-sm focus:outline-none focus:ring-black focus:border-black", placeholder: "50文字以内でストーリーの内容を説明してください" %>
   </div>
 
   <div>
