add:ワールドガイド削除のモーダル調整

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
       <%= render 'layouts/header_before_login' %>
     <% end %>
 
-    <main class="flex-grow">
+    <main class="flex-grow mb-20">
       <div class="max-w-screen-xl mx-auto px-4 sm:px-6 lg:px-8">
         <nav class="text-sm text-black py-4" aria-label="Breadcrumb">
           <%= breadcrumbs separator: " / " %>
