--- a/app/views/world_guides/show.html.erb
+++ b/app/views/world_guides/show.html.erb
@@ -1,6 +1,7 @@
 <% breadcrumb :world_guide, @story, @world_guide %>
-<div class="px-4 sm:px-6 lg:px-8 py-8">
+<div class="px-4 sm:px-6 lg:px-8 py-8 ">
   <div class="max-w-screen-xl mx-auto">
+    <h1 class="text-center text-4xl font-bold tracking-tight mt-12 mb-14">ワールドガイドを確認しよう！</h1>
 
     <div class="flex justify-center items-center gap-4 mb-12">
       <%= link_to "ワールドガイドを編集する", edit_story_world_guide_path(@story, @world_guide), class: "border border-gray-400 px-6 py-3 rounded-md font-semibold hover:bg-gray-100 transition-colors duration-300" %>
