--- a/app/views/plots/new.html.erb
+++ b/app/views/plots/new.html.erb
@@ -1,6 +1,7 @@
 <% breadcrumb :new_plot, @story %>
 <div class="px-4 sm:px-6 lg:px-8 py-8">
   <div class="max-w-3xl mx-auto">
+    <h1 class="text-center text-4xl font-bold tracking-tight mt-12 mb-6">プロットを作成しよう！</h1>
     <div class="p-8">
       <%= render 'form', story: @story, plot: @plot %>
     </div>
