--- a/app/views/stories/edit.html.erb
+++ b/app/views/stories/edit.html.erb
@@ -1,7 +1,7 @@
 <% breadcrumb :edit_story, @story %>
 <div class="px-4 sm:px-6 lg:px-8 py-8">
-  <div class="max-w-3xl mx-auto">
-    <div class="max-w-3xl mx-auto p-8 border-2 rounded-lg mb-14 border-black">
+  <h1 class="text-center text-4xl font-bold tracking-tight mt-12 mb-14">ストーリーを編集しよう！</h1>
+    <div class="max-w-3xl mx-auto p-8">
       <%= render 'form', story: @story %>
     </div>
   </div>
