--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -33,22 +33,22 @@
 
     <div class="border-2 rounded-lg p-8 border-glay">
       <div class="mb-6">
-        <p class="font-bold text-lg mb-2">■ タイトル</p>
+        <p class="font-bold text-lg mb-2">【 タイトル 】</p>
         <p class="text-xl ml-4 break-all"><%= @story.title %></p>
       </div>
 
       <div class="mb-6">
-        <p class="font-bold text-lg mb-2">■ ジャンル</p>
+        <p class="font-bold text-lg mb-2">【 ジャンル 】</p>
         <p class="text-xl ml-4"><%= t("activerecord.attributes.story.genres.#{@story.genre}") %></p>
       </div>
 
       <div class="mb-6">
-        <p class="font-bold text-lg mb-2">■ テーマ</p>
+        <p class="font-bold text-lg mb-2">【 テーマ 】</p>
         <p class="text-xl ml-4"><%= @story.thema %></p>
       </div>
 
       <div class="mb-6">
-        <p class="font-bold text-lg mb-2">■ あらすじ</p>
+        <p class="font-bold text-lg mb-2">【 あらすじ 】</p>
         <div class="text-xl ml-4 mb-20 break-all"><%= simple_format(@story.synopsis) %></div>
       </div>
 
@@ -61,12 +61,12 @@
 
     <div class="mt-12">
       <p class="font-bold text-lg mb-2">■ プロット</p>
-      <div class="border-2 rounded-lg p-8 border-black">
+      <div class="border-2 rounded-lg p-8 border-glay">
 
         <div class="space-y-6">
           <% if @story.plots.any? %>
             <% @story.plots.order(:order, :created_at).each do |plot| %>
-              <div class="border rounded-lg p-6 space-y-4">
+              <div class="border border-black rounded-lg p-6 space-y-4">
 
                 <div class="flex items-baseline">
                   <span class="font-bold text-xl mr-2">【<%= plot.chapter %>】</span>
@@ -74,30 +74,38 @@
                 </div>
 
                 <div>
-                  <p class="font-bold mt-8">【要約】</p>
+                  <p class="font-bold mt-8 mb-2">【要約】</p>
                   <p class="ml-4 text-gray-700"><%= plot.summary %></p>
                 </div>
 
-                <div>
-                  <p class="font-bold mt-6">【ワールドガイド】</p>
-                  <div class="flex flex-wrap gap-2 mt-2 ml-4">
-                    <span class="px-3 py-1 text-sm bg-gray-200 text-gray-700 rounded-full">（未実装）</span>
+                <% if plot.world_guides.any? %>
+                  <div>
+                    <p class="font-bold mt-6">【ワールドガイド】</p>
+                    <div class="flex flex-wrap gap-2 mt-2 mb-4 ml-4">
+                      <% plot.world_guides.each do |wg| %>
+                        <%= link_to wg.country_and_region, story_world_guide_path(@story, wg), class: "px-3 py-1 text-sm border border-black bg-gray-100 text-black rounded-full hover:bg-gray-300 transition-colors" %>
+                      <% end %>
+                    </div>
                   </div>
-                </div>
+                <% end %>
 
-                <div>
-                  <p class="font-bold mt-6">【キャラクター】</p>
-                  <div class="flex flex-wrap gap-2 mt-2 ml-4">
-                     <span class="px-3 py-1 text-sm bg-gray-200 text-gray-700 rounded-full">（未実装）</span>
-                  </div>
-                </div>
+                <% if false %>
+                  <div>
+                    <p class="font-bold mt-6">【キャラクター】</p>
+                    <div class="flex flex-wrap gap-2 mt-2 ml-4">
 
-                <div>
-                  <p class="font-bold mt-6">【フラグ】</p>
-                  <div class="flex flex-wrap gap-2 mt-2 ml-4">
-                    <span class="px-3 py-1 text-sm bg-gray-200 text-gray-700 rounded-full">（未実装）</span>
+                    </div>
                   </div>
-                </div>
+                <% end %>
+
+                <% if false %>
+                  <div>
+                    <p class="font-bold mt-6">【フラグ】</p>
+                    <div class="flex flex-wrap gap-2 mt-2 ml-4">
+                    
+                    </div>
+                  </div>
+                <% end %>
 
                 <div>
                   <p class="font-bold mt-8">【構成メモ】</p>
@@ -131,7 +139,7 @@
       </div>
     </div>
 
-    <div class="flex justify-center mt-14 mb-6">
+    <div class="flex justify-center mt-14">
       <%= link_to "ストーリーを削除する", "#",
         class: "border border-gray-400 px-4 py-3 rounded-md font-semibold hover:bg-red-500 hover:text-white transition-colors duration-300",
         data: {
