--- a/app/views/world_guides/_form.html.erb
+++ b/app/views/world_guides/_form.html.erb
@@ -18,15 +18,15 @@
 
   <div>
     <%= f.label :world_name, "世界名", class: "block text-lg font-bold" %>
-    <%= f.text_field :world_name, class: "mt-2 block w-full px-3 py-2 border border-black rounded-md", placeholder: "20文字以内で記入してください。例：地球" %>
+    <%= f.text_field :world_name, class: "mt-2 block w-full px-3 py-2 border border-black rounded-md", placeholder: "20文字以内で記入してください。（ 例：地球 ）" %>
   </div>
   <div>
     <%= f.label :country_name, "国名", class: "block text-lg font-bold" %>
-    <%= f.text_field :country_name, class: "mt-2 block w-full px-3 py-2 border border-black rounded-md", placeholder: "20文字以内で記入してください。例：日本" %>
+    <%= f.text_field :country_name, class: "mt-2 block w-full px-3 py-2 border border-black rounded-md", placeholder: "20文字以内で記入してください。（ 例：日本 ）" %>
   </div>
   <div>
     <%= f.label :region_name, "地域名", class: "block text-lg font-bold" %>
-    <%= f.text_field :region_name, class: "mt-2 block w-full px-3 py-2 border border-black rounded-md", placeholder: "20文字以内で記入してください。例：東京" %>
+    <%= f.text_field :region_name, class: "mt-2 block w-full px-3 py-2 border border-black rounded-md", placeholder: "20文字以内で記入してください。（ 例：東京 ）" %>
   </div>
 
   <div>
