--- a/app/views/characters/index.html.erb
+++ b/app/views/characters/index.html.erb
@@ -20,21 +20,21 @@
 
     <div class="space-y-10">
       <% @categories.each do |category_key| %>
-        <% category_name = Character.categories[category_key] %>
+        <% category_name = t("enums.character.category.#{category_key}") %>
         <div>
           <div class="flex items-center gap-8 mb-8">
             <h2 class="text-3xl font-bold border-l-8 border-black pl-4"><%= category_name %></h2>
-            <%= link_to "追加", "#", class: "border border-gray-400 px-4 py-1 gap-6 rounded-md font-semibold hover:bg-black hover:text-white" %>
+            <%= link_to "追加", new_story_character_path(@story, character: { category: category_key }), class: "border border-gray-400 px-4 py-1 gap-6 rounded-md font-semibold hover:bg-black hover:text-white transition-colors duration-300" %>
           </div>
           <div class="pl-8 flex flex-wrap gap-3">
             <% if @grouped_characters[category_key] %>
               <% @grouped_characters[category_key].each do |character| %>
-                <span class="px-4 py-1.5 text-md bg-gray-100 border border-black rounded-full"><%= character.name %></span>
+                <%= link_to character.name, story_character_path(@story, character), class: "px-4 py-1.5 text-md bg-gray-100 border border-black rounded-full hover:bg-gray-200 transition-colors duration-200" %>
               <% end %>
             <% else %>
               <p class="text-gray-500">まだ登録されていません。</p>
             <% end %>
-          </div>
+          </div> 
         </div>
       <% end %>
     </div>
